# md_python_pro

./: .env_example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
blog/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_content.py  0002_alter_likedislike_content_type_and_more.py  0002_article_author.py  0003_alter_article_content.py  0003_alter_article_cover.py  0003_delete_likedislike.py
blog/templatetags/: strip_links.py
comments/: admin.py  models.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_options.py  0002_notification.py
core/: settings_legacy.py  urls.py
core/settings/: __init__.py  config.py
ratings/: admin.py  apps.py  models.py  urls.py  views.py
ratings/migrations/: 0001_initial.py
static/css/: styles.css
static/js/: comment.js  edit_profile.js  notification.js  vote.js
templates/: base.html
templates/account/: base_reauthenticate.html  confirm_email_verification_code.html  confirm_login_code.html  email.html  email_change.html  login.html  logout.html  password_change.html  signup.html  signup_by_passkey.html
templates/allauth/elements/: button.html  field.html  form.html  h3.html  provider.html  provider_list.html
templates/allauth/layouts/: base.html
templates/blog/: article_detail.html  index.html
templates/blog/includes/: article_list_card.html
templates/blog/page_parts/: footer.html  navbar.html  profile_sidebar.html  sidebar.html
templates/machina/: _base.html  board_base.html
templates/mfa/: authenticate.html  reauthenticate.html
templates/openid/: login.html
templates/socialaccount/: connections.html  login.html  signup.html
templates/users/: user_profile.html
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_about_alter_profile_avatar.py
utils/: context_processors.py  mixins.py  path_helpers.py  signals.py  view_mixins.py
(+37 files in other folders)
