[tool.poetry]
name = "python-dm-pro"
version = "0.1.0"
description = ""
authors = ["HardLine89 <dmitrymakarov089@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
django = "^5.1.5"
pillow = "^11.1.0"
setuptools = "^75.8.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
