[tool.poetry]
name = "python-dm-pro"
version = "0.1.0"
description = ""
authors = ["HardLine89 <dmitrymakarov089@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
django = "^5.1.5"
pillow = "^11.1.0"
setuptools = "^75.8.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
django-taggit = "^6.1.0"
martor = "^1.6.45"
django-allauth = "^65.3.1"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
python3-openid = "^3.2.0"
pyjwt = "^2.10.1"
python3-saml = "^1.16.0"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.10"
faker = "^36.1.1"
django-htmx = "^1.22.0"
mistune = "^3.1.2"
unidecode = "^1.3.8"
django-redis = "^5.4.0"
django-unfold = "^0.50.0"
django-import-export = "^4.3.7"
django-guardian = "^2.4.0"
django-simple-history = "^3.8.0"
django-mdeditor = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
